installed robolib and switched to using code from frc-2020 instead of frc-2019

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,10 @@
 import org.gradle.internal.os.OperatingSystem
 
+
+
 pluginManagement {
+    rootProject.name = 'bunnybot-2021'
+    include 'robolib'
     repositories {
         mavenLocal()
         gradlePluginPortal()
